# qt-whisper

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/complex/: CMakeLists.txt  complex.cpp  complex.qml  resources.qrc
examples/simple/: CMakeLists.txt  simple.cpp  simple.qml
models/: models.qrc
src/: SpeechToText.cpp  SpeechToText.h  VoiceActivityDetector.cpp  VoiceActivityDetector.h  WhisperBackend.cpp  WhisperBackend.h
src/private/: QmlMacros.h  quantization.h
tests/: CMakeLists.txt  tst_quant.cpp
